[gd_scene load_steps=6 format=4 uid="uid://boeaej6bpprft"]

[ext_resource type="Script" uid="uid://chl5othafkdik" path="res://Scenes/Factory/factory.gd" id="1_cjxgq"]
[ext_resource type="Script" uid="uid://bgb4yebw6tk0u" path="res://Components/factory_area.gd" id="2_a2bxa"]
[ext_resource type="TileSet" uid="uid://dqoyqchowpxss" path="res://Resources/conveyor_belt_tiles.tres" id="2_bnumo"]
[ext_resource type="Script" uid="uid://b4d38icfu6d1p" path="res://Components/belt_system.gd" id="2_t6hok"]
[ext_resource type="TileSet" uid="uid://bgdphqas1gava" path="res://Resources/test_tileset.tres" id="3_583i7"]

[node name="Factory" type="Node2D"]
script = ExtResource("1_cjxgq")

[node name="FactoryArea" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAsAAAAAAAEAAAAAAAwAAAAAAAIAAAAAAAsAAAAAAAMAAAAAAAwAAAAAAAQAAAAAAAsAAAAAAAUAAAAAAAwAAAAAAAYAAAAAAAsAAAAAAAcAAAAAAAwAAAAAAAgAAAAAAAsAAAAAAAkAAAAAAAwAAAAAAAoAAAAAAAsAAAAAAAsAAAAAAAwAAAABAAAAAAAAAAwAAAABAAEAAAAAAAsAAAABAAIAAAAAAAwAAAABAAMAAAAAAAsAAAABAAQAAAAAAAwAAAABAAUAAAAAAAsAAAABAAYAAAAAAAwAAAABAAcAAAAAAAsAAAABAAgAAAAAAAwAAAABAAkAAAAAAAsAAAABAAoAAAAAAAwAAAABAAsAAAAAAAsAAAACAAAAAAAAAAsAAAACAAEAAAAAAAwAAAACAAIAAAAAAAsAAAACAAMAAAAAAAwAAAACAAQAAAAAAAsAAAACAAUAAAAAAAwAAAACAAYAAAAAAAsAAAACAAcAAAAAAAwAAAACAAgAAAAAAAsAAAACAAkAAAAAAAwAAAACAAoAAAAAAAsAAAACAAsAAAAAAAwAAAADAAAAAAAAAAwAAAADAAEAAAAAAAsAAAADAAIAAAAAAAwAAAADAAMAAAAAAAsAAAADAAQAAAAAAAwAAAADAAUAAAAAAAsAAAADAAYAAAAAAAwAAAADAAcAAAAAAAsAAAADAAgAAAAAAAwAAAADAAkAAAAAAAsAAAADAAoAAAAAAAwAAAADAAsAAAAAAAsAAAAEAAAAAAAAAAsAAAAEAAEAAAAAAAwAAAAEAAIAAAAAAAsAAAAEAAMAAAAAAAwAAAAEAAQAAAAAAAsAAAAEAAUAAAAAAAwAAAAEAAYAAAAAAAsAAAAEAAcAAAAAAAwAAAAEAAgAAAAAAAsAAAAEAAkAAAAAAAwAAAAEAAoAAAAAAAsAAAAEAAsAAAAAAAwAAAAFAAAAAAAAAAwAAAAFAAEAAAAAAAsAAAAFAAIAAAAAAAwAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAwAAAAFAAUAAAAAAAsAAAAFAAYAAAAAAAwAAAAFAAcAAAAAAAsAAAAFAAgAAAAAAAwAAAAFAAkAAAAAAAsAAAAFAAoAAAAAAAwAAAAFAAsAAAAAAAsAAAAGAAAAAAAAAAsAAAAGAAEAAAAAAAwAAAAGAAIAAAAAAAsAAAAGAAMAAAAAAAwAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAwAAAAGAAYAAAAAAAsAAAAGAAcAAAAAAAwAAAAGAAgAAAAAAAsAAAAGAAkAAAAAAAwAAAAGAAoAAAAAAAsAAAAGAAsAAAAAAAwAAAAHAAAAAAAAAAwAAAAHAAEAAAAAAAsAAAAHAAIAAAAAAAwAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAwAAAAHAAUAAAAAAAsAAAAHAAYAAAAAAAwAAAAHAAcAAAAAAAsAAAAHAAgAAAAAAAwAAAAHAAkAAAAAAAsAAAAHAAoAAAAAAAwAAAAHAAsAAAAAAAsAAAAIAAAAAAAAAAsAAAAIAAEAAAAAAAwAAAAIAAIAAAAAAAsAAAAIAAMAAAAAAAwAAAAIAAQAAAAAAAsAAAAIAAUAAAAAAAwAAAAIAAYAAAAAAAsAAAAIAAcAAAAAAAwAAAAIAAgAAAAAAAsAAAAIAAkAAAAAAAwAAAAIAAoAAAAAAAsAAAAIAAsAAAAAAAwAAAAJAAAAAAAAAAwAAAAJAAEAAAAAAAsAAAAJAAIAAAAAAAwAAAAJAAMAAAAAAAsAAAAJAAQAAAAAAAwAAAAJAAUAAAAAAAsAAAAJAAYAAAAAAAwAAAAJAAcAAAAAAAsAAAAJAAgAAAAAAAwAAAAJAAkAAAAAAAsAAAAJAAoAAAAAAAwAAAAJAAsAAAAAAAsAAAAKAAAAAAAAAAsAAAAKAAEAAAAAAAwAAAAKAAIAAAAAAAsAAAAKAAMAAAAAAAwAAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAwAAAAKAAYAAAAAAAsAAAAKAAcAAAAAAAwAAAAKAAgAAAAAAAsAAAAKAAkAAAAAAAwAAAAKAAoAAAAAAAsAAAAKAAsAAAAAAAwAAAALAAAAAAAAAAwAAAALAAEAAAAAAAsAAAALAAIAAAAAAAwAAAALAAMAAAAAAAsAAAALAAQAAAAAAAwAAAALAAUAAAAAAAsAAAALAAYAAAAAAAwAAAALAAcAAAAAAAsAAAALAAgAAAAAAAwAAAALAAkAAAAAAAsAAAALAAoAAAAAAAwAAAALAAsAAAAAAAsAAAAMAAAAAAAAAAsAAAAMAAEAAAAAAAwAAAAMAAIAAAAAAAsAAAAMAAMAAAAAAAwAAAAMAAQAAAAAAAsAAAAMAAUAAAAAAAwAAAAMAAYAAAAAAAsAAAAMAAcAAAAAAAwAAAAMAAgAAAAAAAsAAAAMAAkAAAAAAAwAAAAMAAoAAAAAAAsAAAAMAAsAAAAAAAwAAAANAAAAAAAAAAwAAAANAAEAAAAAAAsAAAANAAIAAAAAAAwAAAANAAMAAAAAAAsAAAANAAQAAAAAAAwAAAANAAUAAAAAAAsAAAANAAYAAAAAAAwAAAANAAcAAAAAAAsAAAANAAgAAAAAAAwAAAANAAkAAAAAAAsAAAANAAoAAAAAAAwAAAANAAsAAAAAAAsAAAAOAAAAAAAAAAsAAAAOAAEAAAAAAAwAAAAOAAIAAAAAAAsAAAAOAAMAAAAAAAwAAAAOAAQAAAAAAAsAAAAOAAUAAAAAAAwAAAAOAAYAAAAAAAsAAAAOAAcAAAAAAAwAAAAOAAgAAAAAAAsAAAAOAAkAAAAAAAwAAAAOAAoAAAAAAAsAAAAOAAsAAAAAAAwAAAAPAAAAAAAAAAwAAAAPAAEAAAAAAAsAAAAPAAIAAAAAAAwAAAAPAAMAAAAAAAsAAAAPAAQAAAAAAAwAAAAPAAUAAAAAAAsAAAAPAAYAAAAAAAwAAAAPAAcAAAAAAAsAAAAPAAgAAAAAAAwAAAAPAAkAAAAAAAsAAAAPAAoAAAAAAAwAAAAPAAsAAAAAAAsAAAAQAAAAAAAAAAsAAAAQAAEAAAAAAAwAAAAQAAIAAAAAAAsAAAAQAAMAAAAAAAwAAAAQAAQAAAAAAAsAAAAQAAUAAAAAAAwAAAAQAAYAAAAAAAsAAAAQAAcAAAAAAAwAAAAQAAgAAAAAAAsAAAAQAAkAAAAAAAwAAAAQAAoAAAAAAAsAAAAQAAsAAAAAAAwAAAARAAAAAAAAAAwAAAARAAEAAAAAAAsAAAARAAIAAAAAAAwAAAARAAMAAAAAAAsAAAARAAQAAAAAAAwAAAARAAUAAAAAAAsAAAARAAYAAAAAAAwAAAARAAcAAAAAAAsAAAARAAgAAAAAAAwAAAARAAkAAAAAAAsAAAARAAoAAAAAAAwAAAARAAsAAAAAAAsAAAASAAAAAAAAAAsAAAASAAEAAAAAAAwAAAASAAIAAAAAAAsAAAASAAMAAAAAAAwAAAASAAQAAAAAAAsAAAASAAUAAAAAAAwAAAASAAYAAAAAAAsAAAASAAcAAAAAAAwAAAASAAgAAAAAAAsAAAASAAkAAAAAAAwAAAASAAoAAAAAAAsAAAASAAsAAAAAAAwAAAATAAAAAAAAAAwAAAATAAEAAAAAAAsAAAATAAIAAAAAAAwAAAATAAMAAAAAAAsAAAATAAQAAAAAAAwAAAATAAUAAAAAAAsAAAATAAYAAAAAAAwAAAATAAcAAAAAAAsAAAATAAgAAAAAAAwAAAATAAkAAAAAAAsAAAATAAoAAAAAAAwAAAATAAsAAAAAAAsAAAA=")
tile_set = ExtResource("3_583i7")
script = ExtResource("2_a2bxa")
metadata/_custom_type_script = "uid://bgb4yebw6tk0u"

[node name="FactoryBuildings" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_bnumo")

[node name="BeltSystem" type="Node" parent="."]
script = ExtResource("2_t6hok")
metadata/_custom_type_script = "uid://b4d38icfu6d1p"
